--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import 'reset.css';
 
 body {
-	/*width: 66.5%;*/
 	width: 79em;
+	/*width: 66.5%;*/
 	margin: auto;
 }
 
@@ -35,7 +35,7 @@ header p {
 }
 
 article {
-	width: 964px;
+	width: 76.3%;
 	margin: auto;
 }
 
@@ -50,6 +50,8 @@ article {
 
 #positioningRelatives img {
 	-webkit-transform: rotate(-3.5deg);
+	-ms-transform: rotate(-3.5deg);
+	transform: rotate(-3.5deg);
 	z-index: 0;
 }
 
@@ -65,6 +67,21 @@ article {
 		70% 20%,
 		rgba(0, 0, 0, 0.4) 30%,
 		rgba(0, 0, 0, 0) 70%);
+	background: -o-radial-gradient(
+		50% 50%,
+		70% 20%,
+		rgba(0, 0, 0, 0.4) 30%,
+		rgba(0, 0, 0, 0) 70%);
+	background: -moz-radial-gradient(
+		50% 50%,
+		70% 20%,
+		rgba(0, 0, 0, 0.4) 30%,
+		rgba(0, 0, 0, 0) 70%);
+	background: radial-gradient(
+		50% 50%,
+		70% 20%,
+		rgba(0, 0, 0, 0.4) 30%,
+		rgba(0, 0, 0, 0) 70%);
 	margin-bottom: -3em;
 }
 
@@ -72,6 +89,7 @@ article {
 	font-family: 'Merriweather';
 	font-weight: 300;
 	font-size: 1.5em;
+	width: 99%;
 }
 
 #positioningRelativesText {
@@ -105,6 +123,8 @@ article {
 	margin-left: -9.35em;
 	padding-left: 9.35em;
 	-webkit-box-shadow: inset 0 -2.3em 0 #FFF;
+	-moz-box-shadow: inset 0 -2.3em 0 #FFF;
+	box-shadow: inset 0 -2.3em 0 #FFF;
 	margin-bottom: 4em;
 }
 
@@ -133,7 +153,7 @@ article {
 
 #stayingAfloat {
 	text-align: right;
-	width: 15%;
+	width: 14.5%;
 	font-family: 'Lato';
 	float: left;
 	color: rgb(70, 70, 70);
@@ -252,15 +272,17 @@ article {
 }
 
 #displayingFamousBlocks p {
-	padding-left: 1em;
-	padding-right: 1em;
-	margin-top: 0.9em;
-	font-size: 1.6em;
+	padding-left: 1.1em;
+	padding-right: 1.1em;
+	margin-top: 0.7em;
+	font-size: 1.55em;
 }
 
 #displayingFamousBlocks #link {
 	font-size: 1.07em;
 	padding-bottom: 2em;
+	margin-left: 0.5em;
+	color: rgb(193, 187, 185);
 }
 
 #transformers {
@@ -287,7 +309,8 @@ article {
 	margin-top: -0.2em;
 	margin-bottom: 0;
 	margin: auto;
-	padding-bottom: 1.1em;
+	padding-bottom: 1.5em;
+	padding-top: 0.7em;
 	color: #FFF;
 	width: 90%;
 }
@@ -322,7 +345,24 @@ article {
 		70% 20%,
 		rgba(0, 0, 0, 0.7) 20%,
 		rgba(0, 0, 0, 0) 70%);
+	background: -0-radial-gradient(
+		50% 50%,
+		70% 20%,
+		rgba(0, 0, 0, 0.7) 20%,
+		rgba(0, 0, 0, 0) 70%);
+	background: -moz-radial-gradient(
+		50% 50%,
+		70% 20%,
+		rgba(0, 0, 0, 0.7) 20%,
+		rgba(0, 0, 0, 0) 70%);
+	background: radial-gradient(
+		50% 50%,
+		70% 20%,
+		rgba(0, 0, 0, 0.7) 20%,
+		rgba(0, 0, 0, 0) 70%);
 	-webkit-transform: rotate(-6deg);
+	-ms-transform: rotate(-6deg);
+	transform: rotate(-6deg);
 	margin-bottom: -3em;
 }
 
@@ -351,6 +391,16 @@ article {
 	margin-top: -0.25em;
 	margin-right: 0.2em;
 	margin-left: -0.4em;
+}
+
+#transformers h2#revenge {
+	font-size: 1.3em;
+	margin-bottom: 0.5em;
+}
+
+#transformers h1#filmTitle {
+	font-size: 1.9em;
+	margin-bottom: -0.2em;
 }
 
 #transformers h2.small {
@@ -388,20 +438,24 @@ article {
 	content: '';
 }
 
+#transformers #transformersBottom h2 {
+	margin-bottom: -0.5em;
+}
+
 #circle {
 	height: 2em;
 	width: 2em;
 	border: 1px solid white;
 	border-radius: 50%;
 	margin: auto;
-	margin-top: 0.5em;
+	margin-top: 1.5em;
 	margin-bottom: -1.1em;
 	background: #FFF;
 }
 
 #borderBottomLine {
 	font-family: 'Oswald';
-	width: 72%;
+	width: 71%;
 	float: left;
 }
 
@@ -414,7 +468,7 @@ article {
 
 #borderBottomLine h2 {
 	border-bottom: 0.1em solid black;
-	font-size: 2.4em;
+	font-size: 2.3em;
 	font-weight: normal;
 	margin-top: 0.3em;
 	margin-bottom: 0;
@@ -428,7 +482,7 @@ article {
 }
 
 #borderBottomLine img {
-	margin-top: -1.05em;
+	margin-top: -1.1em;
 }
 
 #overflow {
@@ -441,31 +495,49 @@ article {
 	text-align: right;
 }
 
-#overflow p {
-	width: 75%
+#overflow {
+	padding-top: 2em;
 }
 
 #overflowOne {
 	-webkit-transform: rotate(1deg);
-	margin-left: 17em;
+	-ms-transform: rotate(1deg);
+	transform: rotate(1deg);
 	-webkit-filter: blur(0px);
+	margin-left: 14em;
+	width: 77%
 }
 
 #overflowTwo {
 	-webkit-transform: rotate(-1deg);
+	-ms-transform: rotate(-1deg);
+	transform: rotate(-1deg);
 	-webkit-filter: blur(0px);
+	margin-left: 1em;
+	width: 74%;
+	margin-top: -1em;
 }
 
 #overflowThree {
 	-webkit-transform: rotate(1deg);
-	margin-left: 10em;
-	margin-top: 2em;
+	-ms-transform: rotate(1deg);
+	transform: rotate(1deg);
 	-webkit-filter: blur(0px);
+	margin-left: 7em;
+	margin-top: 2em;
+	width: 75%;
 }
 
-#leftFooter {
+footer {
+	margin-top: 5em;
+	margin-bottom: 3em;
+}
+
+#leftFooter p {
 	font-family: 'Lato';
 	float: left;
+	color: rgb(140, 140, 140);
+	margin: 0;
 }
 
 #rightFooter p {
@@ -473,4 +545,15 @@ article {
 	text-align: right;
 	font-weight: 300;
 	margin: 0;
+	color: rgb(152, 152, 152);
 }
+
+#rightFooter strong {
+	font-weight: 900;
+}
+
+/*@media (max-width: 1000px) {
+	#positioningRelatives {
+		float:left;
+	}
+}*/
