--- a/style.css
+++ b/style.css
@@ -181,51 +181,53 @@ article {
 	width: 85%;
 	margin-left: 15%;
 	margin-top: 5.2em;
+	position: relative;
 }
 
 #bullets ul {
-	font-family: 'Lato';
+	font-family: 'Oswald';
 	font-weight: bold;
 	padding-left: 5em;
 	padding: 2em 0 0 0;
-	margin-left: 7em;
+	margin-left: 3em;
+	text-align: center;
+	position: absolute;
+	top: 10em;
 }
 
 #bullets li {
 	display: inline-block;
 	min-height: 18em;
-	width: 7em;
+	width: 7.8em;
 	margin-right: 1.5em;
 }
 
-#bullets ul li:nth-child(1) {
-	background: url('img/bulletOne.png') no-repeat;
-	background-position: center bottom;
-	vertical-align: top;
+#bullets img {
+	position: absolute;
+	bottom: 17em;
 }
 
-#bullets ul li:nth-child(2) {
-	background: url('img/bulletTwo.png') no-repeat;
-	background-position: center bottom;
-	vertical-align: top;
+#bullets li p {
+	padding: 0;
+	margin: 0;
+	color: rgb(224, 224, 224);
+	font-weight: normal;
 }
 
-#bullets ul li:nth-child(3) {
-	background: url('img/bulletThree.png') no-repeat;
-	background-position: center bottom;
-	vertical-align: top;
+#bullets li p.small {
+	font-size: 1.5em;
 }
 
-#bullets ul li:nth-child(4) {
-	background: url('img/bulletFour.png') no-repeat;
-	background-position: center bottom;
-	vertical-align: top;
+#bullets li p.medium {
+	font-size: 2em;
 }
 
-#bullets ul li:nth-child(5) {
-	background: url('img/bulletFive.png') no-repeat;
-	background-position: center bottom;
-	vertical-align: top;
+#bullets li p.large {
+	font-size: 2.5em;
+}
+
+#bullets li p.largest {
+	font-size: 4em;
 }
 
 #bulletsHead {
