--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-@import 'reset.css';
+html, body, ul, ol, h1 {
+	margin: 0;
+	padding: 0;
+}
 
 body {
 	width: 79em;
-	/*width: 66.5%;*/
 	margin: auto;
 }
 
@@ -184,60 +186,6 @@ article {
 	position: relative;
 }
 
-#bullets ul {
-	font-family: 'Oswald';
-	font-weight: bold;
-	padding-left: 5em;
-	padding: 2em 0 0 0;
-	margin-left: 3em;
-	text-align: center;
-	position: absolute;
-	top: 10em;
-}
-
-#bullets li {
-	display: inline-block;
-	min-height: 18em;
-	width: 7.8em;
-	margin-right: 1.5em;
-}
-
-#bullets img {
-	position: absolute;
-	bottom: 17em;
-}
-
-#bullets li p {
-	padding: 0;
-	margin: 0;
-	color: rgb(224, 224, 224);
-	font-weight: normal;
-}
-
-#bullets li p.small {
-	font-size: 1.5em;
-}
-
-#bullets li p.medium {
-	font-size: 2em;
-}
-
-#bullets li p.large {
-	font-size: 2.5em;
-}
-
-#bullets li p.largest {
-	font-size: 4em;
-}
-
-#bulletsHead {
-	border-bottom: 1px solid;
-	border-top:  1px solid;
-	border-color: rgb(224, 224, 224);
-	text-align: center;
-	margin-left: 2em;
-}
-
 #bullets h3 {
 	display: inline-block;
 	margin: 0.5em 0 0.5em 0;
@@ -250,6 +198,74 @@ article {
 	margin-left: 2em;
 	vertical-align: middle;
 	color: rgb(224, 193, 103);
+	font-size: 0.9em;
+	font-family: 'Lato';
+	font-weight: 700;
+}
+
+#bullets ul {
+	padding-left: 5em;
+	padding: 2em 0 0 0;
+	margin-left: 3em;
+	text-align: center;
+	position: absolute;
+	top: 15.5em;
+}
+
+#bullets li {
+	display: inline-block;
+	min-height: 18em;
+	width: 7.8em;
+	margin-right: 1.5em;
+}
+
+#bullets li p {
+	font-family: 'Oswald';
+	font-weight: bold;
+}
+
+#bullets img {
+	position: absolute;
+	bottom: 17.5em;
+	margin-left: 2em;
+}
+
+#bullets li p {
+	padding: 0;
+	margin: 0;
+	color: rgb(224, 224, 224);
+	font-weight: normal;
+	vertical-align: bottom;
+}
+
+#bullets li p.small {
+	font-size: 1.5em;
+	line-height: 100%;
+}
+
+#bullets li p.medium {
+	font-size: 2em;
+	line-height: 110%;
+	letter-spacing: -3px;
+}
+
+#bullets li p.large {
+	font-size: 2.5em;
+	line-height: 100%;
+	letter-spacing: -3px;
+}
+
+#bullets li p.largest {
+	font-size: 5em;
+	line-height: 100%;
+}
+
+#bulletsHead {
+	border-bottom: 1px solid;
+	border-top:  1px solid;
+	border-color: rgb(224, 224, 224);
+	text-align: center;
+	margin-left: 2em;
 }
 
 #displayingFamousBlocks {
@@ -293,6 +309,7 @@ article {
 	font-style: italic;
 	width: 22%;
 	background: rgb(58, 131, 187);
+	text-align: center;
 }
 
 #transformers h2, #transformers h1 {
@@ -315,17 +332,19 @@ article {
 	padding-top: 0.7em;
 	color: #FFF;
 	width: 90%;
+	text-align: left;
 }
 
-#transformers p#border{
+p#border{
 	color: rgb(35, 79, 112);
 	font-size: 2em;
 	overflow: hidden;
 	padding: 0;
 	margin: 0;
-	margin-top: -0.95em;
+	margin-top: -1.2em;
 	margin-right: 0;
 	width: 100%;
+	height: 1.5em;
 }
 
 #transformers img {
@@ -378,6 +397,7 @@ article {
 	margin: -1.1em 0 0 0;
 	padding-top: 1em;
 	height: 6.5em;
+	margin-bottom: 0.6em;
 }
 
 #rottonTomato h2 {
@@ -405,6 +425,14 @@ article {
 	margin-bottom: -0.2em;
 }
 
+#transformers #locationOne, #transformers #locationTwo {
+	margin-bottom: -0.3em;
+}
+
+#transformers #date {
+	margin-top: -0.3em;
+}
+
 #transformers h2.small {
 	font-size: 0.9em;
 }
@@ -429,7 +457,7 @@ article {
 	top: 5em;
 	width: 90%;
 	margin: auto;
-	margin-top: -0.5em;
+	margin-top: -0.8em;
 }
 
 #percentBar:after {
@@ -444,13 +472,18 @@ article {
 	margin-bottom: -0.5em;
 }
 
+#worldPremire {
+	-moz-box-shadow: inset 50px 0 0 0 rgb(136, 174, 209), inset -50px 0 0 0 rgb(136, 174, 209);
+	-webkit-box-shadow: inset 50px 0 0 0 rgb(136, 174, 209), inset -50px 0 0 0 rgb(136, 174, 209);
+	box-shadow: inset 50px 0 0 0 rgb(136, 174, 209), inset -50px 0 0 0 rgb(136, 174, 209);
+}
+
 #circle {
 	height: 2em;
 	width: 2em;
 	border: 1px solid white;
 	border-radius: 50%;
 	margin: auto;
-	margin-top: 1.5em;
 	margin-bottom: -1.1em;
 	background: #FFF;
 }
@@ -515,7 +548,7 @@ article {
 	-ms-transform: rotate(-1deg);
 	transform: rotate(-1deg);
 	-webkit-filter: blur(0px);
-	margin-left: 1em;
+	margin-left: 2em;
 	width: 74%;
 	margin-top: -1em;
 }
@@ -554,8 +587,244 @@ footer {
 	font-weight: 900;
 }
 
-/*@media (max-width: 1000px) {
-	#positioningRelatives {
-		float:left;
+@media (max-width: 1300px) {
+	body {
+		width: 100%;
 	}
-}*/
+
+	header {
+		background: rgba(215,25,33,0.25);
+		margin-bottom: 3em;
+		padding-bottom: 1em;
+		padding-top: 1em;
+	}
+
+	header p {
+		padding: 0.5em 0 0 0;
+		text-align: center;
+		margin: 0 auto;
+		float: none;
+	}
+
+	header h1 {
+		margin: auto;
+		font-size: 1000%;
+	}
+
+	#positioningRelatives {
+		position: static !important;
+		width: 100%;
+		float: none;
+		margin-bottom: -10em;
+		height: auto;
+	}
+
+	#positioningRelatives p {
+		margin-top: 2em;
+		font-size: 90%;
+		margin-bottom: 1em;
+	}
+
+	#positioningRelatives h3 {
+		margin-left: 3em;
+		margin-top: 4em;
+	}
+
+	#positioningRelatives h1 {
+		margin-left: 1.7em;
+		font-size: 200%;
+	}
+
+	#positioningRelativesText {
+		margin: auto;
+	}
+
+	#positioningRelatives img {
+		width: 100%;
+	}
+
+	#boxModel {
+		margin: 0 auto;
+		width: 100%;
+		padding: 0;
+	}
+
+	#stayingAfloat {
+		width: 100%;
+		float: none;
+		text-align: left;
+	}
+
+	#bullets {
+		float: none;
+		position: static !important;
+		margin: 0 auto;
+		width: 100%;
+	}
+
+	#bulletsHead {
+		margin: 0 auto;
+	}
+
+	#bullets ul, #bullets img {
+		position: static !important;
+	}
+
+	#bullets li {
+		padding-bottom: 0.5em;
+	}
+
+	#boxModel h1, #boxModel p {
+		margin: 0 auto;
+	}
+
+	#boxModel img {
+		margin: 0 auto;
+		max-width: 367px;
+		width: 90%;
+		padding-top: 1em;
+	}
+
+	#boxModel img {
+		position: static !important;
+	}
+
+	#stayingAfloat img {
+		display: none;
+		visibility: hidden;
+	}
+
+	#displayingFamousBlocks {
+		margin-top: 2em;
+	}
+
+	#borderBottomLine img {
+		display: none;
+		visibility: hidden;
+	}
+
+	#borderBottomLine h1 {
+		font-size: 350%;
+	}
+
+	#borderBottomLine h2 {
+		font-size: 200%;
+	}
+
+	#transformers img {
+		width: 90%;
+		max-width: 185px;
+		margin-left: 0.2em;
+	}
+
+	#transformers {
+		font-size: 80%;
+	}
+
+	#transformers #worldPremire {
+		-moz-box-shadow: inset 30px 0 0 0 rgb(136, 174, 209), inset -30px 0 0 0 rgb(136, 174, 209);
+		-webkit-box-shadow: inset 30px 0 0 0 rgb(136, 174, 209), inset -30px 0 0 0 rgb(136, 174, 209);
+		box-shadow: inset 30px 0 0 0 rgb(136, 174, 209), inset -30px 0 0 0 rgb(136, 174, 209);
+	}
+
+	#overflowOne {
+		margin: 0 auto;
+		width: 100%
+	}
+
+	#overflowTwo {
+		margin: 0 auto;
+		width: 100%;
+		margin-top: 2em;
+	}
+
+	#overflowThree {
+		margin: 0 auto;
+		margin-top: 2em;
+		width: 100%;
+	}
+}
+
+@media (max-width: 1030px) {
+	#transformers #percentBar {
+		padding-top: 1em;
+	}
+}
+
+@media (max-width: 960px) {
+	#transformers img {
+		position: static !important;
+		margin: 0 auto;
+		display: block;
+		padding-top: 0.5em;
+	}
+
+	#transformers #transformerShadow {
+		margin: 0 auto;
+		margin-top: -5em;
+		position: relative;
+		z-index: 0;
+		margin-bottom: -3em;
+	}
+
+	#transformers {
+		margin: 0 auto;
+		width: 60%;
+		float: none;
+		margin-bottom: 2em;
+	}
+
+	#transformers #worldPremire {
+		-moz-box-shadow: inset 70px 0 0 0 rgb(136, 174, 209), inset -70px 0 0 0 rgb(136, 174, 209);
+		-webkit-box-shadow: inset 70px 0 0 0 rgb(136, 174, 209), inset -70px 0 0 0 rgb(136, 174, 209);
+		box-shadow: inset 70px 0 0 0 rgb(136, 174, 209), inset -70px 0 0 0 rgb(136, 174, 209);
+	}
+
+	#circle {
+		height: 5em;
+		width: 5em;
+		display: inline-block;
+		margin: auto;
+		text-align: center;
+		margin-bottom: -3em;
+	}
+
+	#borderBottomLine {
+		width: 100%;
+	}
+}
+
+@media (max-width: 850px) {
+	header {
+		padding-top: 0;
+		margin-bottom: 2em;
+	}
+
+	header h1 {
+		font-size: 500%;
+	}
+
+	#transformers #worldPremire {
+		-moz-box-shadow: inset 30px 0 0 0 rgb(136, 174, 209), inset -30px 0 0 0 rgb(136, 174, 209);
+		-webkit-box-shadow: inset 30px 0 0 0 rgb(136, 174, 209), inset -30px 0 0 0 rgb(136, 174, 209);
+		box-shadow: inset 30px 0 0 0 rgb(136, 174, 209), inset -30px 0 0 0 rgb(136, 174, 209);
+	}
+
+	#positioningRelatives {
+		margin-bottom: -10em;
+	}
+
+	#positioningRelatives #positionRelativeShadow {
+		width: 80%;
+	}
+
+	
+}
+
+@media (max-width: 650px) {
+	#circle {
+		height: 3em;
+		width: 3em;
+		margin-bottom: -1.8em;
+	}
+}
